# dream-dashboard

./: .gitignore  .ocamlformat  LICENSE  Makefile  README.md  TODO.md  dream-analytics.opam  dream-dashboard.opam  dream-monitoring.opam  dune  dune-project  package-lock.json  package.json  tailwind.config.js
asset/: main.css
asset/css/: style.css
example/: dune  server.ml
lib/: dream_dashboard.ml  dream_dashboard.mli  dune  error.ml  event.ml  info.ml  info.mli  pp.ml
lib/dream-analytics/: dream_analytics.ml  dream_analytics.mli  dune  event.ml
lib/dream-monitoring/: dream_monitoring.ml  dream_monitoring.mli  dune  info.ml  info.mli  my_metrics.ml  pp.ml
lib/dream-monitoring/asset/: main.css
lib/dream-monitoring/templates/: dune  index_template.eml  layout_template.eml
lib/templates/: analytics_template.eml  dune  index_template.eml  layout_template.eml
src/: dream_dashboard.ml  dream_dashboard.mli  dune  event.ml  info.ml  info.mli  my_metrics.ml  my_metrics.mli
src/template/: analytics_template.eml  layout_template.eml  logs_template.eml  monitoring_template.eml  overview_template.eml
test/: dune  handler_test.ml
