(library
 (public_name dream-analytics)
 (name dream_analytics)
 (libraries dream user-agent-parser))

(subdir
 asset/
 (rule
  (target main.css)
  (deps
   (source_tree %{workspace_root}/node_modules)
   (source_tree templates/))
  (mode promote-until-clean)
  (action
   (chdir
    %{workspace_root}
    ; We use node_modules/tailwindcss/lib/cli.js instead of `npx tailwindcss`
    ; because dune won't include node_modules/.bin in the build, no matter
    ; what I do.
    (run node node_modules/tailwindcss/lib/cli.js build --content
      'lib/dream-analytics/templates/*.eml' -o %{target})))))

(rule
 (targets asset.ml)
 (deps
  asset/main.css
  (source_tree asset))
 (action
  (with-stdout-to
   %{null}
   (run %{bin:ocaml-crunch} -m plain asset -o %{targets}))))

(include_subdirs unqualified)
